[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "place-index"
version = "0.0.1"
requires-python = "==3.12"
dependencies = [
    "dotenv>=0.9.9",
    "firebase-admin>=6.6.0",
    "tensorflow-hub>=0.16.1",
    "unidecode>=1.3.8",
    "vectordb2>=0.1.9",
]
