[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "place-index"
version = "0.0.1"
requires-python = "==3.12.*"
dependencies = [
    "dotenv>=0.9.9",
    "fastembed>=0.6.0",
    "firebase-admin>=6.6.0",
    "mrpt>=2.0.1",
    "openai>=1.65.2",
    "tensorflow-hub>=0.16.1",
    "unidecode>=1.3.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
